[gd_scene load_steps=10 format=3 uid="uid://c8kuewso70dyx"]

[ext_resource type="Texture2D" uid="uid://6gtabr7liuob" path="res://Shop/ShopInterior.png" id="1_eeho4"]
[ext_resource type="Script" uid="uid://qri6qfxmvixl" path="res://Shop/ShopInterior.gd" id="2_shop_script"]
[ext_resource type="AudioStream" uid="uid://cwn3uur4bgef2" path="res://Sounds/Trinkets.mp3" id="3_vsfgq"]
[ext_resource type="Texture2D" uid="uid://b04t5rodckxfe" path="res://Shop/Tof.png" id="4_8pyis"]
[ext_resource type="AudioStream" uid="uid://dtmkyo6yyyfqq" path="res://Sounds/CatHappy.mp3" id="4_ko7ju"]
[ext_resource type="AudioStream" uid="uid://cu8k70hfx4w3g" path="res://Sounds/Golfsmith.mp3" id="5_dw7jg"]
[ext_resource type="Texture2D" uid="uid://c38xossm3wigh" path="res://Shop/TofSign.png" id="5_ko7ju"]
[ext_resource type="AudioStream" uid="uid://r7xw6t1gktju" path="res://Sounds/UhUh.mp3" id="6_dckqu"]
[ext_resource type="Texture2D" uid="uid://lsnkplt6tvcd" path="res://Shop/GolfsmithShopSprite.png" id="7_77fnv"]

[node name="ShopInterior" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_shop_script")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_top = -98.595
offset_right = 1536.0
offset_bottom = 925.405
scale = Vector2(0.755, 0.755)
texture = ExtResource("1_eeho4")

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Return to Course"

[node name="Trinkets" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vsfgq")

[node name="CatHappy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ko7ju")

[node name="UpgradeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_dw7jg")

[node name="CantAfford" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dckqu")
volume_db = -2.93

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 218.0
offset_right = 1624.0
offset_bottom = 1242.0
scale = Vector2(0.225, 0.225)
texture = ExtResource("4_8pyis")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -10.0
offset_top = 23.0
offset_right = 1526.0
offset_bottom = 1047.0
scale = Vector2(0.235, 0.235)
texture = ExtResource("5_ko7ju")

[node name="ShopItems" type="Control" parent="."]
z_index = 11
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ItemContainer1" type="Panel" parent="ShopItems"]
layout_mode = 0
offset_left = 816.0
offset_top = 45.0
offset_right = 1016.0
offset_bottom = 295.0
scale = Vector2(0.59, 0.59)

[node name="ItemContainer2" type="Panel" parent="ShopItems"]
layout_mode = 0
offset_left = 822.0
offset_top = 298.0
offset_right = 1022.0
offset_bottom = 548.0
scale = Vector2(0.6, 0.6)

[node name="ItemContainer3" type="Panel" parent="ShopItems"]
layout_mode = 0
offset_left = 418.0
offset_top = 44.0
offset_right = 618.0
offset_bottom = 294.0
scale = Vector2(0.59, 0.59)

[node name="ItemContainer4" type="Panel" parent="ShopItems"]
layout_mode = 0
offset_left = 419.0
offset_top = 297.0
offset_right = 619.0
offset_bottom = 547.0
scale = Vector2(0.6, 0.6)

[node name="DeckDialog" type="Control" parent="."]
z_index = 1000
anchors_preset = 0
offset_left = 613.83
offset_top = 310.89
offset_right = 613.83
offset_bottom = 310.89
mouse_filter = 1

[node name="ReplacementConfirmation" type="Control" parent="."]
z_index = 2000
anchors_preset = 0
offset_left = 573.0
offset_top = 385.0
offset_right = 573.0
offset_bottom = 385.0
mouse_filter = 1

[node name="Golfsmith" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 20.0
offset_top = 322.0
offset_right = 146.0
offset_bottom = 462.0
scale = Vector2(2.345, 2.345)
texture_normal = ExtResource("7_77fnv")
texture_pressed = ExtResource("7_77fnv")
texture_hover = ExtResource("7_77fnv")
texture_disabled = ExtResource("7_77fnv")
texture_focused = ExtResource("7_77fnv")
